# lib-sync

./: .env  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
libsync/: __main__.py  analyze_rekordbox_library.py  cli.py  cli_entry_point.py  constants.py  create_spotify_playlists.py  file_utils.py  generate_rekordbox_library_report.py  get_ids_from_recording.py  get_rekordbox_library.py  get_spotify_client.py  get_spotify_matches.py  libsync.py  parser_utils.py  rekordbox_library.py  requirements.txt  similarity_utils.py  string_utils.py  sync_rekordbox_to_spotify.py
libsync/analyze/: analyze_rekordbox_library.py  generate_rekordbox_library_report.py  get_rekordbox_library.py
libsync/db/: db_read_operations.py  db_utils.py  db_write_operations.py
libsync/id/: download_audio.py  get_ids_from_recording.py  youtube_dl_utils.py
libsync/notebooks/: print_spotify_playlist_songs.ipynb  testing_tag_editing.ipynb
libsync/spotify/: create_spotify_playlists.py  get_cached_sync_data.py  get_spotify_matches.py  save_cached_sync_data.py  spotify_api_utils.py  spotify_auth.py  sync_rekordbox_to_spotify.py  sync_spotify_playlists.py
libsync/utils/: constants.py  file_utils.py  parser_utils.py  rekordbox_library.py  similarity_utils.py  string_utils.py
sample_data/: claudio_rekordbox_collection_5_28_2023.xml  example_rekordbox_export.xml  sample_spotify_url.txt  small_example_rekordbox_export.xml
scripts/: bpm_analysis.py  combined_analysis_viz.py  multithreading_experiment.py  run_sync.sh  sample_spotipy_script.py  search_api_experiment.py
src/: cli_entry_point.py  create_spotify_playlists.py  get_rekordbox_library.py  get_spotify_matches.py  rekordbox_library.py
src/libsync/: __main__.py  cli.py
src/libsync/analyze/: generate_rekordbox_library_report.py  get_rekordbox_library.py
src/libsync/db/: db_read_operations.py  db_utils.py  db_write_operations.py
src/libsync/id/: download_audio.py  get_ids_from_recording.py  youtube_dl_utils.py
src/libsync/notebooks/: print_spotify_playlist_songs.ipynb  sort_spotify_playlist_by_popularity.ipynb
src/libsync/spotify/: get_spotify_matches.py  spotify_api_utils.py  spotify_auth.py  (+2 more)
(+12 files in other folders)
