[project]
name = "lib-sync"
version = "0.2.2"
description = "A collection of tools for managing your music library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Josh Lebedinsky", email = "joshlebed@gmail.com" }]
dependencies = [
  "spotipy==2.23.0",
  "python-dotenv==1.0.0",
  "yt-dlp==2025.06.09",
  "aiohttp==3.9.3",
  "colorama==0.4.6",
  "tqdm==4.62.3",
  "shazamio==0.7.0",
  "ffmpeg-python==0.2.0",
  "audioop-lts>=0.2.1; python_version >= '3.13'",
  "librosa>=0.11.0",
  "matplotlib>=3.10.8",
  "numpy>=2.1.2",
  "scipy>=1.16.3",
]


[project.urls]
Homepage = "https://github.com/clobraico22/lib-sync"

[project.scripts]
libsync = "libsync.cli:main"

[dependency-groups]
dev = [
    "ruff==0.12.2",
    "ipykernel==6.30.1",
    "pre-commit==4.2.0",
    "nbstripout==0.8.1",
    "twine>=6.1.0",
    "mypy>=1.16.1",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W", "B", "UP" ] # TODO: add "C90"
ignore = ["E501", "C901"]  # Line too long (eventually fix)


[tool.mypy]
strict = true
